checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000057760.8e73d15569f5a0577a8fa73f87817b476f68864f
CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#38: 
drivers/leds/leds-net48xx.c: In function ‘net48xx_error_led_set’:
                                         ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#39: 
drivers/leds/leds-net48xx.c:31: error: ‘scx200_gpio_ops’ undeclared 
                                       ^

WARNING:TYPO_SPELLING: 'Shouldnt' may be misspelled - perhaps 'Shouldn't'?
#49: 
Shouldnt EXPORT_SYMBOL(scx200_gpio_ops) prevent exactly that ?
^^^^^^^^

Some words may have been misspelled.  Consider reviewing them.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000057760.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 0 errors, 1 warnings, 2 checks, 23 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000057760.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
